data/derived/comb/progs/unify/prog3453.ml.out
Characters 107-109:
  | Average (a1,a2) -> (eval (VarX,a1,a2));;
                                   ^^
Error: This expression has type expr but an expression was expected of type
         float
